Project crushingviz {
  database_type: 'PostgreSQL'
  Note: 'A collection of data visualization apps'
}

Table geographic_area {
  id integer [primary key, not null]
  acled_code integer [unique]
  name text [not null]
  type enum [
    not null,
    note: '''
      "region",
      "country",
      "admin_1"
    '''
  ]
  iso string
  parent integer [ref: > geographic_area.id]
  geojson jsonb
}

enum geographic_area_type {
  "region"
  "country"
  "admin_1"
}

enum sub_event_type {
  "Government regains territory"
  "Non-state actor overtakes territory"
  "Armed clash"
  "Excessive force against protesters"
  "Protest with intervention"
  "Peaceful protest"
  "Violent demonstration"
  "Mob violence"
  "Chemical weapon"
  "Air/drone strike"
  "Suicide bomb"
  "Shelling/artillery/missile attack"
  "Remote explosive/landmine/IED"
  "Grenade"
  "Sexual violence"
  "Attack"
  "Abduction/forced disappearance"
  "Agreement"
  "Arrests"
  "Change to group/activity"
  "Disrupted weapons use"
  "Headquarters or base established"
  "Looting/property destruction"
  "Non-violent transfer of territory"
  "Other"
}

enum disorder_type {
  "Political violence"
  "Demonstrations"
  "Strategic developments"
}

enum event_type {
  "Battles"
	"Protests"
	"Riots"
	"Explosions/Remote violence"
	"Violence against civilians"
	"Strategic developments"
}

Table acled_weekly_agg {
  week timestamp [not null]
	region_id integer [not null, ref: > geographic_area.id]
	country_id integer [ref: > geographic_area.id]
	admin1_id integer [ref: > geographic_area.id]
	disorder_type disorder_type [note: 'DisorderType is one of three broad categories: Political violence, Demonstrations, or Strategic developments']
	event_type event_type [note: 'Protests, Riots, Explosions/Remote violence, Violence against civilians, Strategic developments']
	sub_event_type sub_event_type [not null, note: 'The most detailed event type classification level']
	event_count integer [note: 'Events is the total number of discrete events recorded for the specified week, Admin1, and sub_event_type']
	fatalities integer [note: 'Fatalities is the sum of reported fatalities across the events for this row']
	population_exposure integer [note: 'Population exposure is the best aggregated estimate of people exposed to any events that week. Users should not sum these values as they represent exposure estimates based on proximity']
	centroid_longitude number
	centroid_latitude number

	indexes {
	  (week, region_id, country_id, admin1_id, disorder_type, event_type, sub_event_type) [pk]
		(country_id, week)
		(admin1_id, week)
	}
}

Table data_job {
  id integer [pk, increment]
  created_at timestamp [default: 'now()']
  source text
  status text
  duration integer
  type text [not null]
  meta jsonb
}
